--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.0",
+    "@material-ui/icons": "^3.0.1",
+    "mqtt": "^2.18.8",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-scripts": "1.1.5",
-    "@material-ui/core": "^3.0.0",
-    "@material-ui/icons": "^3.0.1"
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
