--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@material-ui/core": "^3.0.0",
     "@material-ui/icons": "^3.0.1",
     "mqtt": "^2.18.8",
+    "prop-types": "latest",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-scripts": "1.1.5",
-    "prop-types": "latest"
+    "react-sound": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
